--- a/mrfApp/Db/Makefile
+++ b/mrfApp/Db/Makefile
@@ -12,8 +12,12 @@ include $(TOP)/configure/CONFIG
 # databases, templates, substitutions like this
 DB += vme-evg-230.db
 DB_INSTALLS += $(COMMON_DIR)/vme-evg-230.req
-DB += mtca-evr-300.db vme-evr-230rf.db
-DB_INSTALLS += $(COMMON_DIR)/mtca-evr-300.req $(COMMON_DIR)/vme-evr-230rf.req
+DB += mtca-evr-300.db
+DB_INSTALLS += $(COMMON_DIR)/mtca-evr-300.req
+DB += vme-evr-230.db
+DB_INSTALLS += $(COMMON_DIR)/vme-evr-230.req
+DB += vme-evr-230rf.db
+DB_INSTALLS += $(COMMON_DIR)/vme-evr-230rf.req
 DB += mrf-autosave-menu.db
 DB += mrf-write-all-settings-with-status.db
 
@@ -31,12 +35,12 @@ $(COMMON_DIR)/vme-evg-230.db: $(COMMON_DIR)/../generate_evg_records.sh $(COMMON_
 $(COMMON_DIR)/vme-evg-230.req: $(COMMON_DIR)/../generate_evg_autosave_request_file.sh $(COMMON_DIR)/../generate_evg.sh $(COMMON_DIR)/../generate_lib.sh $(COMMON_DIR)/../evg-*.inc.req $(COMMON_DIR)/../template-*.inc.req
 	MRF_DESCRIPTION_RECORD_TYPE="$(MRF_DESCRIPTION_RECORD_TYPE)" "$(COMMON_DIR)/../generate_evg_autosave_request_file.sh" "$(basename $(notdir $@))" >"$@"
 
-$(COMMON_DIR)/mtca-evr-300.db $(COMMON_DIR)/vme-evr-230rf.db: $(COMMON_DIR)/../generate_evr_records.sh $(COMMON_DIR)/../generate_evr.sh $(COMMON_DIR)/../generate_lib.sh $(COMMON_DIR)/../evr-*.inc.db $(COMMON_DIR)/../template-*.inc.db
+$(COMMON_DIR)/mtca-evr-300.db $(COMMON_DIR)/vme-evr-230.db $(COMMON_DIR)/vme-evr-230rf.db: $(COMMON_DIR)/../generate_evr_records.sh $(COMMON_DIR)/../generate_evr.sh $(COMMON_DIR)/../generate_lib.sh $(COMMON_DIR)/../evr-*.inc.db $(COMMON_DIR)/../template-*.inc.db
 	MRF_DESCRIPTION_RECORD_TYPE="$(MRF_DESCRIPTION_RECORD_TYPE)" "$(COMMON_DIR)/../generate_evr_records.sh" "$(basename $(notdir $@))" >"$@"
 
-$(COMMON_DIR)/mtca-evr-300.req $(COMMON_DIR)/vme-evr-230rf.req: $(COMMON_DIR)/../generate_evr_autosave_request_file.sh $(COMMON_DIR)/../generate_evr.sh $(COMMON_DIR)/../generate_lib.sh $(COMMON_DIR)/../evr-*.inc.req $(COMMON_DIR)/../template-*.inc.req
+$(COMMON_DIR)/mtca-evr-300.req $(COMMON_DIR)/vme-evr-230.req $(COMMON_DIR)/vme-evr-230rf.req: $(COMMON_DIR)/../generate_evr_autosave_request_file.sh $(COMMON_DIR)/../generate_evr.sh $(COMMON_DIR)/../generate_lib.sh $(COMMON_DIR)/../evr-*.inc.req $(COMMON_DIR)/../template-*.inc.req
 	MRF_DESCRIPTION_RECORD_TYPE="$(MRF_DESCRIPTION_RECORD_TYPE)" "$(COMMON_DIR)/../generate_evr_autosave_request_file.sh" "$(basename $(notdir $@))" >"$@"
 
 # This line is needed so that make does not complain about missing *.d files
 # when using recent versions of EPICS Base.
-.PHONY: mtca-evr-300.db$(DEP) vme-evg-230.db$(DEP) vme-evr-230rf.db$(DEP)
+.PHONY: mtca-evr-300.db$(DEP) vme-evg-230.db$(DEP) vme-evr-230.db$(DEP) vme-evr-230rf.db$(DEP)
