Adapt dkms.conf for updated Makefile.

--- a/support/mrf-pci-dkms-0.1.20220406/mrf-pci-0.1.20220406/dkms.conf
+++ b/support/mrf-pci-dkms-0.1.20220406/mrf-pci-0.1.20220406/dkms.conf
@@ -1,7 +1,7 @@
 PACKAGE_NAME="mrf-pci"
-PACKAGE_VERSION="0.1.20160324"
+PACKAGE_VERSION="0.1.20220406"
 CLEAN="make clean"
-MAKE[0]="make all KVERSION=$kernelver"
+MAKE[0]="'make' KERNELDIR='$kernel_source_dir' modules"
 BUILT_MODULE_NAME[0]="pci_mrfevg"
 BUILT_MODULE_NAME[1]="pci_mrfevr"
 DEST_MODULE_LOCATION[0]="/updates"
