Extend output features for the MTCA-EVR-300.
This commit adds support for specifying a second source for the output
mapping, choosing a flip-flop as the output source, and configuring
backplane outputs (including the GTX configuration for the clock
outputs).

--- a/mrfApp/mrfEpicsSrc/Makefile
+++ b/mrfApp/mrfEpicsSrc/Makefile
@@ -35,10 +35,10 @@ mrfEpics_SRCS += MrfRecordAddress.cpp
 mrfEpics_SRCS += MrfStringinRecord.cpp
 mrfEpics_SRCS += MrfWaveformInRecord.cpp
 mrfEpics_SRCS += MrfWaveformOutRecord.cpp
+mrfEpics_SRCS += mrfArrayASubRoutines.c
 mrfEpics_SRCS += mrfEpicsError.cpp
 mrfEpics_SRCS += mrfRecordDefinitions.cpp
 mrfEpics_SRCS += mrfRegistrarCommon.cpp
-mrfEpics_SRCS += mrfSequencerASubRoutines.c
 
 mrfEpics_LIBS += $(EPICS_BASE_IOC_LIBS)
 mrfEpics_LIBS += mrfCommon
