Add preliminary support for the VME-EVR-300.

--- a/mrfApp/Db/Makefile
+++ b/mrfApp/Db/Makefile
@@ -3,6 +3,27 @@ include $(TOP)/configure/CONFIG
 #----------------------------------------
 #  ADD MACRO DEFINITIONS AFTER THIS LINE
 
+MRF_ALL_DEVICES = $(MRF_EVG_DEVICES) $(MRF_EVR_DEVICES)
+MRF_EVG_DEVICES = vme-evg-230
+MRF_EVR_DEVICES = mtca-evr-300 vme-evr-230 vme-evr-230rf vme-evr-300
+MRF_DB_DEPS = \
+ $(COMMON_DIR)/../generate_$(1).sh \
+ $(COMMON_DIR)/../generate_lib.sh \
+ $(COMMON_DIR)/../$(1)-*.inc.db \
+ $(COMMON_DIR)/../template-*.inc.db
+MRF_REQ_DEPS = $(MRF_DB_DEPS:.db=.req)
+
+MRF_EVG_DB_DEPS = $(call MRF_DB_DEPS,evg)
+MRF_EVG_DB_TARGETS = \
+ $(foreach device_type,$(MRF_EVG_DEVICES),$(COMMON_DIR)/$(device_type).db)
+MRF_EVG_REQ_DEPS = $(MRF_EVG_DB_DEPS:.db=.req)
+MRF_EVG_REQ_TARGETS = $(MRF_EVG_DB_TARGETS:.db=.req)
+MRF_EVR_DB_DEPS = $(call MRF_DB_DEPS,evr)
+MRF_EVR_DB_TARGETS = \
+ $(foreach device_type,$(MRF_EVR_DEVICES),$(COMMON_DIR)/$(device_type).db)
+MRF_EVR_REQ_DEPS = $(MRF_EVR_DB_DEPS:.db=.req)
+MRF_EVR_REQ_TARGETS = $(MRF_EVR_DB_TARGETS:.db=.req)
+
 #----------------------------------------------------
 #  Optimization of db files using dbst (DEFAULT: NO)
 #DB_OPT = YES
@@ -10,14 +31,9 @@ include $(TOP)/configure/CONFIG
 #----------------------------------------------------
 # Create and install (or just install) into <top>/db
 # databases, templates, substitutions like this
-DB += vme-evg-230.db
-DB_INSTALLS += $(COMMON_DIR)/vme-evg-230.req
-DB += mtca-evr-300.db
-DB_INSTALLS += $(COMMON_DIR)/mtca-evr-300.req
-DB += vme-evr-230.db
-DB_INSTALLS += $(COMMON_DIR)/vme-evr-230.req
-DB += vme-evr-230rf.db
-DB_INSTALLS += $(COMMON_DIR)/vme-evr-230rf.req
+DB += $(foreach device_type,$(MRF_ALL_DEVICES),$(device_type).db)
+DB_INSTALLS += $(MRF_EVG_REQ_TARGETS)
+DB_INSTALLS += $(MRF_EVR_REQ_TARGETS)
 DB += mrf-autosave-menu.db
 DB += mrf-write-all-settings-with-status.db
 
@@ -29,18 +45,34 @@ include $(TOP)/configure/RULES
 #----------------------------------------
 #  ADD RULES AFTER THIS LINE
 
-$(COMMON_DIR)/vme-evg-230.db: $(COMMON_DIR)/../generate_evg_records.sh $(COMMON_DIR)/../generate_evg.sh $(COMMON_DIR)/../generate_lib.sh $(COMMON_DIR)/../evg-*.inc.db $(COMMON_DIR)/../template-*.inc.db
-	MRF_DESCRIPTION_RECORD_TYPE="$(MRF_DESCRIPTION_RECORD_TYPE)" "$(COMMON_DIR)/../generate_evg_records.sh" "$(basename $(notdir $@))" >"$@"
+$(MRF_EVG_DB_TARGETS): $(MRF_EVG_DB_DEPS)
+	MRF_DESCRIPTION_RECORD_TYPE="$(MRF_DESCRIPTION_RECORD_TYPE)" \
+	 "$(COMMON_DIR)/../generate_evg.sh" \
+	 "$(basename $(notdir $@))" \
+	 records \
+	 >"$@"
 
-$(COMMON_DIR)/vme-evg-230.req: $(COMMON_DIR)/../generate_evg_autosave_request_file.sh $(COMMON_DIR)/../generate_evg.sh $(COMMON_DIR)/../generate_lib.sh $(COMMON_DIR)/../evg-*.inc.req $(COMMON_DIR)/../template-*.inc.req
-	MRF_DESCRIPTION_RECORD_TYPE="$(MRF_DESCRIPTION_RECORD_TYPE)" "$(COMMON_DIR)/../generate_evg_autosave_request_file.sh" "$(basename $(notdir $@))" >"$@"
+$(MRF_EVG_REQ_TARGETS): $(MRF_EVG_REQ_DEPS)
+	MRF_DESCRIPTION_RECORD_TYPE="$(MRF_DESCRIPTION_RECORD_TYPE)" \
+	 "$(COMMON_DIR)/../generate_evg.sh" \
+	 "$(basename $(notdir $@))" \
+	 autosave_request_file \
+	 >"$@"
 
-$(COMMON_DIR)/mtca-evr-300.db $(COMMON_DIR)/vme-evr-230.db $(COMMON_DIR)/vme-evr-230rf.db: $(COMMON_DIR)/../generate_evr_records.sh $(COMMON_DIR)/../generate_evr.sh $(COMMON_DIR)/../generate_lib.sh $(COMMON_DIR)/../evr-*.inc.db $(COMMON_DIR)/../template-*.inc.db
-	MRF_DESCRIPTION_RECORD_TYPE="$(MRF_DESCRIPTION_RECORD_TYPE)" "$(COMMON_DIR)/../generate_evr_records.sh" "$(basename $(notdir $@))" >"$@"
+$(MRF_EVR_DB_TARGETS): $(MRF_EVR_DB_DEPS)
+	MRF_DESCRIPTION_RECORD_TYPE="$(MRF_DESCRIPTION_RECORD_TYPE)" \
+	 "$(COMMON_DIR)/../generate_evr.sh" \
+	 "$(basename $(notdir $@))" \
+	 records \
+	 >"$@"
 
-$(COMMON_DIR)/mtca-evr-300.req $(COMMON_DIR)/vme-evr-230.req $(COMMON_DIR)/vme-evr-230rf.req: $(COMMON_DIR)/../generate_evr_autosave_request_file.sh $(COMMON_DIR)/../generate_evr.sh $(COMMON_DIR)/../generate_lib.sh $(COMMON_DIR)/../evr-*.inc.req $(COMMON_DIR)/../template-*.inc.req
-	MRF_DESCRIPTION_RECORD_TYPE="$(MRF_DESCRIPTION_RECORD_TYPE)" "$(COMMON_DIR)/../generate_evr_autosave_request_file.sh" "$(basename $(notdir $@))" >"$@"
+$(MRF_EVR_REQ_TARGETS): $(MRF_EVR_REQ_DEPS)
+	MRF_DESCRIPTION_RECORD_TYPE="$(MRF_DESCRIPTION_RECORD_TYPE)" \
+	 "$(COMMON_DIR)/../generate_evr.sh" \
+	 "$(basename $(notdir $@))" \
+	 autosave_request_file \
+	 >"$@"
 
 # This line is needed so that make does not complain about missing *.d files
 # when using recent versions of EPICS Base.
-.PHONY: mtca-evr-300.db$(DEP) vme-evg-230.db$(DEP) vme-evr-230.db$(DEP) vme-evr-230rf.db$(DEP)
+.PHONY: $(foreach device_type,$(MRF_ALL_DEVICES),$(device_type).db$(DEP))
