Add early, preliminary support for the VME-EVM-300.
This implementation is far from complete and is still missing records
for a number of crucial settings.

As part of this change, the documentation is restructured to use
separate documents for the process variables of the now three device
types. This change has been made because the single document that was
used previously was getting too long.

--- a/mrfApp/Db/Makefile
+++ b/mrfApp/Db/Makefile
@@ -3,8 +3,9 @@ include $(TOP)/configure/CONFIG
 #----------------------------------------
 #  ADD MACRO DEFINITIONS AFTER THIS LINE
 
-MRF_ALL_DEVICES = $(MRF_EVG_DEVICES) $(MRF_EVR_DEVICES)
+MRF_ALL_DEVICES = $(MRF_EVG_DEVICES) $(MRF_EVM_DEVICES) $(MRF_EVR_DEVICES)
 MRF_EVG_DEVICES = vme-evg-230
+MRF_EVM_DEVICES = vme-evm-300
 MRF_EVR_DEVICES = mtca-evr-300 vme-evr-230 vme-evr-230rf vme-evr-300
 
 MRF_DB_DEPS = \
