--- a/mrfApp/mrfUdpIpSrc/Makefile
+++ b/mrfApp/mrfUdpIpSrc/Makefile
@@ -15,10 +15,14 @@ LIBRARY_IOC += mrfUdpIp
 # install mrfUdpIp.dbd into <top>/dbd
 #DBD += mrfUdpIp.dbd
 
+INC += MrfUdpIpClient.h
 INC += MrfUdpIpMemoryAccess.h
+INC += MrfUdpPacket.h
 
 # specify all source files to be compiled and added to the library
+mrfUdpIp_SRCS += MrfUdpIpClient.cpp
 mrfUdpIp_SRCS += MrfUdpIpMemoryAccess.cpp
+mrfUdpIp_SRCS += MrfUdpPacket.cpp
 
 # mrfUdpIp_LIBS += $(EPICS_BASE_IOC_LIBS)
 mrfUdpIp_LIBS += mrfCommon
